--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                   <h1>Summary of M.A.R Movies Top 5000 Movies Dataset</h1>
                   <hr>
                   <img src="Film_Reel.png" class = "Main_Visualization rounded float-left">
-                  <p>The purpose of this dataset is to help movie watchers find more information about their favorite movies on the top 4 streaming platforms; Netflix, Hulu, Amazon Video, and Disney+.By merging a dataset of the Top 5000 movies from the top 4 streaming platforms, and dataset from IMDB.</p>
+                  <p>Given the increased demand for easily accessible at-home entertainment, M.A.R movies created a database for families and movie aficionados alike. We compiled information from IMDB and Kaggle on movie directors, genres, available streaming platforms, budgets, and revenues for easy data exploration. Users can determine what streaming platforms work best for them based on their preference for low budget films or popular blockbuster movies.  </p>
+                  <p>Interested in finding out more? <a href = "https://docs.google.com/document/d/1V7Kf7-1u6TJPfo648_SkEEHysBjPnVortiEhuf8AtiM/edit?usp=sharing">Click Here :)</p>
                 </div>
                 </div>
         </div>   
