--- a/data.html
+++ b/data.html
@@ -29,6 +29,9 @@
         <li class="nav-item">
           <a class="nav-link" href="data.html">Movie Data</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="report.html">Written Report</a>
+        </li>
         <li class="nav-item dropdown">
         </li>
       </ul>
